# esp-idf-lib

components/hdc1000/: CMakeLists.txt
components/hmc5883l/: CMakeLists.txt
components/hts221/: CMakeLists.txt
components/lib8tion/: CMakeLists.txt
components/mhz19b/: CMakeLists.txt
components/sht3x/: CMakeLists.txt
components/sht4x/: CMakeLists.txt
